--- a/Invoice System 02/.classpath
+++ b/Invoice System 02/.classpath
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="/Users/Michael/Desktop/Programming/External Jar/joda-time-2.0.jar"/>
 	<classpathentry kind="lib" path="/Users/Michael/Desktop/Programming/External Jar/xstream-distribution-1.4.7-src.zip"/>
 	<classpathentry kind="lib" path="/Users/Michael/Desktop/Programming/External Jar/jboss-common-jdbc-wrapper-src.jar"/>
 	<classpathentry kind="lib" path="/Users/Michael/Desktop/Programming/External Jar/mysql-connector-java-5.1.30-bin.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 7 [1.7.0_51]">
+		<attributes>
+			<attribute name="owner.project.facets" value="java"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
